# Camera_Flask_App

./: camera_flask_app.py  lock.json  pyproject.toml
.ropeproject/: autoimport.db
templates/: index.html
