[project]
name = "computer-vision-flaskapp"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "purepani", email = "pani0028@umn.edu"},
]
dependencies = [
    "Flask>=3.0.2",
    "numpy>=1.26.4",
    "opencv-python>=4.9.0.80",
    "scikit-image",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
